# website-voice-asisstant

./: .gitignore  README.md
backend/: agent.py  backend.py  pyproject.toml
backend/data/maps/: alcamp.json
backend/map/: engine.py  flow.py  logging_config.py  pyproject.toml  steps.py  webite.py
backend/map/utils/: __init__.py  create_schema.py
backend/notebooks/: infer.ipynb  step.ipynb
backend/scripts/: livekit_embed.js
other/extenstion/: background.js  manifest.json  package-lock.json  package.json
other/extenstion/popup/: embed-popup.js  embed-popup.js.map  livekit_embed.js  popup.html
popup_front/app/api/connection-details/: route.ts
popup_front/components/embed-popup/: agent-client.tsx  standalone-bundle-root.tsx
popup_front/hooks/: use-connection-details.ts
popup_front/lib/: env.ts
websites/simple_login/: package-lock.json  package.json  server.js
websites/simple_login/public/: index.html
