[project]
name = "map"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["map", "map.utils"]
package-dir = {"" = ".."}

[tool.setuptools.package-data]
map = ["*.py"]
